# kovio-cloud

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  fly.toml  pyproject.toml
docs/plans/: 2026-07-01-live-custom-display-metrics.md
migrations/: 004_campaigns_is_promo.sql  005_impressions_min_distance.sql  006_custom_displays.sql  007_impressions_interaction_metrics.sql  008_display_assignments.sql  009_sessions.sql  010_session_campaign_perception.sql  README.md
src/kovio_cloud/: audience.py  auth.py  cli.py  config.py  conversation.py  db.py  display_insights.py  greeting.py  main.py  models.py  schemas.py  spend_processor.py  supabase_auth.py
src/kovio_cloud/routes/: __init__.py  admin.py  advertiser.py  audience.py  display.py  oem.py  sdk.py  sessions.py
tests/: conftest.py  test_display_radar.py  test_session_speak.py
