[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kovio-cloud"
version = "0.2.0"
description = "Kovio cloud control plane — FastAPI service + spend processor for the open robot ad platform."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Kovio" }]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "structlog>=24.1",
    "typer>=0.12",
    "pyjwt[crypto]>=2.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[project.scripts]
kovio-cloud = "kovio_cloud.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/kovio_cloud"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
